syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "account.proto";

option go_package = "github.com/itsscb/df/pb";

message CreateAccountRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Create Account";
          description: "Create an Account";
          required: [
            "email",
            "password"
            ];
        };
        example: "{\"email\": \"john.doe@example.com\", \"password\": \"MayTheForceBeWithYou!\"}";
    };
    string email = 1;
    string password = 2;
}

message CreateAccountResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Created Account";
          description: "Returns the created Account";
        };
    };
    Account account = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}